[package]
name = "tub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
blake3 = "1.3.1"
clap = { version = "4.0.26", features = ["derive"] }
libc = "0.2.126"
sodiumoxide = "0.2.7"
tempfile = "3.3.0"
zstd = "0.12.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "mybench"
harness = false
