[package]
name = "tub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.3.1", features = ["rayon"] }
clap = { version = "4.0.26", features = ["derive"] }
ed25519-dalek = { version = "2.0.0-pre.0", features = ["rand_core"] }
imara-diff = "0.1.5"
libc = "0.2.126"
rand = "0.8.5"
sodiumoxide = "0.2.7"
tempfile = "3.3.0"
yansi = "0.5.1"
zstd = "0.12.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "mybench"
harness = false
