[package]
name = "tub"
version = "0.1.0"
authors = ["Jason Gerard DeRose <jasonderose@gmail.com>"]
edition = "2024"
licence = "AGPL-3.0-or-later"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.3.1", features = ["rayon"] }
clap = { version = "4.0.26", features = ["derive"] }
ed25519-dalek = { version = "2.0.0-rc.2", features = ["rand_core"] }
getrandom = "0.2.8"
imara-diff = "0.1.5"
rand = "0.8.5"
tempfile = "3.3.0"
yansi = "0.5.1"
zstd = "0.12.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "mybench"
harness = false
